Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -1,4 +1,9 @@
 ---
-title: 'Create Plant'
-openapi: 'POST /plants'
+title: "Sending WhatsApp messages"
+openapi: "POST /channels/{channelId}/messages"
+description: "In order to send a WhatsApp message, you must have an active WhatsApp channel and perform a HTTP request to the following endpoint with a valid API key."
 ---
+
+### Authorization
+
+Bearer authentication header of the form Bearer \<token\>, where \<token\> is your API key token.
