--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -28,3 +28,32 @@ With each API call, you will need to set request headers including your Bearer t
 ```Curl
 curl -X GET https://rapidsender.net/api/v1 -H 'Authorization: Bearer N0b1E3rJszGv0e6pG3kD0WwMj4HnLZqY9PjUoAcx
 ```
+
+## API Errors
+
+RapidSender uses standard HTTP status codes to indicate the success or failure of an API request. Generally speaking, codes in the 2xx range indicate that a request was successfully processed and codes in the 4xx range indicate that there was an error that resulted from the information provided (e.g., authentication, no balance or a missing or wrong parameter).
+
+In case of an error, the body of the response includes a json formatted response that tells you exactly what is wrong.
+
+| Attributes | Description                                                                                    |
+| ---------- | ---------------------------------------------------------------------------------------------- |
+| status     | Boolean.                                                                                       |
+| message    | A human-readable description of the error.                                                     |
+| errors     | The parameter in your request that is related to the error if the error is parameter specific. |
+
+### Error Handling
+
+The error object will give you information about the error makes it easier to fix.
+
+### Error Object
+```JSON
+{
+    "success": false,
+    "message": "Validation failed.",
+    "errors": {
+        "image_url": [
+            "The image url field is required."
+        ]
+    }
+}
+```
