Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Sending WhatsApp messages"
-openapi: "POST /channels/{channelId}/messages"
+title: 'Sending WhatsApp messages'
+openapi: 'POST /channels/{channelId}/messages'
 description: "In order to send a WhatsApp message, you must have an active WhatsApp channel and perform a HTTP request to the following endpoint with a valid API key."
 ---
 
